--- a/style.css
+++ b/style.css
@@ -40,5 +40,5 @@ body {
 
 @font-face {
   font-family: "Kiwa Serif Kerned"; /* 원하는 폰트 이름 지정 */
-  src: url("./fonts/Kiwa.otf"); /* 폰트 파일의 경로 지정 */
+  src: url("./fonts/Kiwa2.otf"); /* 폰트 파일의 경로 지정 */
 }
